--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="header-link1" href="./index.html">Web</a>
+        <a class="header-link2" href="./index.html">Studio</a>
+        <ul clsaa="header-navigation-list">
+          <li clsaa="header-navigation-item"><a href="">Studio</a></li>
+          <li clsaa="header-navigation-item"><a href="">Portfolio</a></li>
+          <li clsaa="header-navigation-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
+      <address class="header-adress">
+        <ul class="header-adress-list">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -27,39 +35,39 @@
 
     <main>
       <!-- Section1 -->
-      <section>
+      <section class="top-section">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
       <!-- Section2 -->
-      <section>
+      <section class="features">
         <h2 hidden>features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="fearutes-list">
+          <li class="fearutes-item">
+            <h3 class="fearutes-item-name">Strategy</h3>
+            <p class="fearutes-item-name-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="fearutes-item">
+            <h3 class="fearutes-item-name">Punctuality</h3>
+            <p class="fearutes-item-name-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="fearutes-item">
+            <h3 class="fearutes-item-name">Diligence</h3>
+            <p class="fearutes-item-name-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="fearutes-item">
+            <h3 class="fearutes-item-name">Technologies</h3>
+            <p class="fearutes-item-name-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -68,35 +76,35 @@
       </section>
 
       <!-- Section 3 -->
-      <section>
+      <section class="wedoing">
         <h2>What are we doing</h2>
-        <ul>
-          <li>
+        <ul class="wedoing-list">
+          <li class="wedoing-item">
             <img src="./images/WeDoing/Monitor.jpg" alt="Monitor" width="360" />
           </li>
-          <li>
+          <li class="wedoing-item">
             <img src="./images/WeDoing/Tel.jpg" alt="Telephone" width="360" />
           </li>
-          <li>
+          <li class="wedoing-item">
             <img src="./images/WeDoing/Laptop.jpg" alt="Laptop" width="360" />
           </li>
         </ul>
       </section>
       <!-- Section 4 -->
-      <section>
+      <section class="out-team">
         <h2>Our Team</h2>
-        <ul>
-          <li>
+        <ul class="out-team-list">
+          <li class="out-team-item">
             <img src="./images/Team/Mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="out-team-item">
             <img src="./images/Team/Tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="out-team-item">
             <img
               src="./images/Team/Camila.jpg"
               alt="Camila Garcia"
@@ -105,7 +113,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="out-team-item">
             <img
               src="./images/Team/Daniel.jpg"
               alt="Daniel Wilson"
@@ -118,9 +126,9 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link" href="./index.html">WebStudio</a>
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
