--- a/index.html
+++ b/index.html
@@ -16,19 +16,30 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-link1" href="./index.html">Web</a>
-        <a class="header-link2" href="./index.html">Studio</a>
-        <ul clsaa="header-navigation-list">
-          <li clsaa="header-navigation-item"><a href="">Studio</a></li>
-          <li clsaa="header-navigation-item"><a href="">Portfolio</a></li>
-          <li clsaa="header-navigation-item"><a href="">Contacts</a></li>
+        <a class="header-link-WebStudio link" href="./index.html">WebStudio</a>
+        <ul class="header-navigation-list list">
+          <li class="header-navigation-item">
+            <a class="link" href="">Studio</a>
+          </li>
+          <li class="header-navigation-item">
+            <a class="link" href="">Portfolio</a>
+          </li>
+          <li class="header-navigation-item">
+            <a class="link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address class="header-adress">
-        <ul class="header-adress-list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-adress-list list">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -43,7 +54,7 @@
       <!-- Section2 -->
       <section class="features">
         <h2 hidden>features</h2>
-        <ul class="fearutes-list">
+        <ul class="fearutes-list list">
           <li class="fearutes-item">
             <h3 class="fearutes-item-name">Strategy</h3>
             <p class="fearutes-item-name-description">
@@ -78,7 +89,7 @@
       <!-- Section 3 -->
       <section class="wedoing">
         <h2>What are we doing</h2>
-        <ul class="wedoing-list">
+        <ul class="wedoing-list list">
           <li class="wedoing-item">
             <img src="./images/WeDoing/Monitor.jpg" alt="Monitor" width="360" />
           </li>
@@ -91,43 +102,55 @@
         </ul>
       </section>
       <!-- Section 4 -->
-      <section class="out-team">
-        <h2>Our Team</h2>
-        <ul class="out-team-list">
-          <li class="out-team-item">
-            <img src="./images/Team/Mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li class="out-team-item">
-            <img src="./images/Team/Tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li class="out-team-item">
+      <section class="hero">
+        <h2 class="hero-section-name">Our Team</h2>
+        <ul class="hero-list list">
+          <li class="hero-item">
             <img
+              class="hero-link"
+              src="./images/Team/Mark.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3 class="hero-name">Mark Guerrero</h3>
+            <p class="hero-title">Product Designer</p>
+          </li>
+          <li class="hero-item">
+            <img
+              class="hero-link"
+              src="./images/Team/Tom.jpg"
+              alt="Tom Ford"
+              width="264"
+            />
+            <h3 class="hero-name">Tom Ford</h3>
+            <p class="hero-title">Frontend Developer</p>
+          </li>
+          <li class="hero-item">
+            <img
+              class="hero-link"
               src="./images/Team/Camila.jpg"
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="hero-name">Camila Garcia</h3>
+            <p class="hero-title">Marketing</p>
           </li>
-          <li class="out-team-item">
+          <li class="hero-item">
             <img
+              class="hero-link"
               src="./images/Team/Daniel.jpg"
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="hero-name">Daniel Wilson</h3>
+            <p class="hero-title">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-link" href="./index.html">WebStudio</a>
+      <a class="footer-link link" href="./index.html">WebStudio</a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
