--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
     />
   </head>
   <body>
+    <!-- ! Header -->
     <header class="header">
       <nav>
-        <a class="header-link-WebStudio link" href="./index.html">WebStudio</a>
+        <a class="header-link-WebStudio link logo" href="./index.html"
+          ><span>Web</span>Studio</a
+        >
         <ul class="header-navigation-list list">
           <li class="header-navigation-item">
-            <a class="link" href="">Studio</a>
+            <a class="header-navigation-link link" href="">Studio</a>
           </li>
           <li class="header-navigation-item">
-            <a class="link" href="">Portfolio</a>
+            <a class="header-navigation-link link" href="">Portfolio</a>
           </li>
           <li class="header-navigation-item">
-            <a class="link" href="">Contacts</a>
+            <a class="header-navigation-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -33,12 +36,17 @@
       <address class="header-adress">
         <ul class="header-adress-list list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a
+              class="header-contact-link link"
+              class="link"
+              href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -47,38 +55,38 @@
     <main>
       <!-- Section1 -->
       <section class="top-section">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
       <!-- Section2 -->
-      <section class="features">
+      <section class="features-section">
         <h2 hidden>features</h2>
         <ul class="fearutes-list list">
           <li class="fearutes-item">
-            <h3 class="fearutes-item-name">Strategy</h3>
-            <p class="fearutes-item-name-description">
+            <h3 class="fearutes-item-title">Strategy</h3>
+            <p class="fearutes-item-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="fearutes-item">
-            <h3 class="fearutes-item-name">Punctuality</h3>
-            <p class="fearutes-item-name-description">
+            <h3 class="fearutes-item-title">Punctuality</h3>
+            <p class="fearutes-item-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="fearutes-item">
-            <h3 class="fearutes-item-name">Diligence</h3>
-            <p class="fearutes-item-name-description">
+            <h3 class="fearutes-item-title">Diligence</h3>
+            <p class="fearutes-item-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="fearutes-item">
-            <h3 class="fearutes-item-name">Technologies</h3>
-            <p class="fearutes-item-name-description">
+            <h3 class="fearutes-item-title">Technologies</h3>
+            <p class="fearutes-item-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -87,8 +95,8 @@
       </section>
 
       <!-- Section 3 -->
-      <section class="wedoing">
-        <h2>What are we doing</h2>
+      <section class="wedoing-section">
+        <h2 class="wedoing-title">What are we doing</h2>
         <ul class="wedoing-list list">
           <li class="wedoing-item">
             <img src="./images/WeDoing/Monitor.jpg" alt="Monitor" width="360" />
@@ -101,9 +109,10 @@
           </li>
         </ul>
       </section>
+
       <!-- Section 4 -->
       <section class="hero">
-        <h2 class="hero-section-name">Our Team</h2>
+        <h2 class="hero-section-title">Our Team</h2>
         <ul class="hero-list list">
           <li class="hero-item">
             <img
@@ -150,7 +159,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-link link" href="./index.html">WebStudio</a>
+      <a class="footer-link link logo" href="./index.html"><span>Web</span>Studio</a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
