--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- Section1 -->
       <section class="top-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="main-btn" type="button">Order Service</button>
       </section>
 
       <!-- Section2 -->
