--- a/portfolio.html
+++ b/portfolio.html
@@ -12,20 +12,20 @@
 
 </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="header-link-WebStudio link logo" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="header-navigation-list list">
+          <li class="header-navigation-item"><a class="header-navigation-link link" href="">Studio</a></li>
+          <li class="header-navigation-item"><a  class="header-navigation-link link" href="">Portfolio</a></li>
+          <li class="header-navigation-item"><a  class="header-navigation-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-adress">
+        <ul class="header-adress-list list">
+          <li><a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -33,77 +33,77 @@
     <main>
       <!-- Section1 -->
       <section>
-        <ul>
-          <li>All</li>
-          <li>Web Site</li>
-          <li>App</li>
-          <li>Design</li>
-          <li>Marketing</li>
+        <ul class="list">
+          <li><button class="btn-active" type="button">All</button></li>
+          <li><button class="btn" type="button">Web Site</button></li>
+          <li><button class="btn" type="button">App</button></li>
+          <li><button class="btn" type="button">Design</button></li>
+          <li><button class="btn" type="button">Marketing</button></li>
         </ul>
       </section>
 
       <!-- Section2 -->
       <section>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+        <ul class="list-of-projects list">
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/1Banking.jpg" alt="b" />
+            <h3 class="project-title">Banking App Interface Concept</h3>
+            <p class="project-description">App</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/2Cashless.jpg" alt="c" /><img />
+            <h3 class="project-title">Cashless Payment</h3>
+            <p class="project-description">Marketing</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Meditation App</h3>
-            <p>App</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" /><img />
+            <h3 class="project-title">Meditation App</h3>
+            <p class="project-description">App</p>
           </li>
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/4Taxi.jpg" alt="t" /><img />
+            <h3 class="project-title">Taxi Service</h3>
+            <p class="project-description">Marketing</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/5Screen.jpg" alt="s" /><img />
+            <h3 class="project-title">Screen Illustrations</h3>
+            <p class="project-description">Design</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/6Online.jpg" alt="o" /><img />
+            <h3 class="project-title">Online Courses</h3>
+            <p class="project-description">Marketing</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/7Instagram.jpg" alt="i" /><img />
+            <h3 class="project-title">Instagram Stories Concept</h3>
+            <p class="project-description">Design</p>
           </li>
 
-          <li>
-            <img src="" alt="" /><img />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/8Organic.jpg" alt="" /><img />
+            <h3 class="project-title">Organic Food</h3>
+            <p class="project-description">Web Site</p>
+          </li>
+
+          <li class="projects-list-item">
+            <img src="./images/Portfolio/9Fresh.jpg" alt="" /><img />
+            <h3 class="project-title">Fresh Coffee</h3>
+            <p class="project-description">Web Site</p>
           </li>
         </ul>
       </section>
 
       <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link link logo"href="./index.html"><span>Web</span>Studio</a>
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
