--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="header-navigation-link link" href="">Studio</a>
           </li>
           <li class="header-navigation-item">
-            <a class="header-navigation-link link" href="">Portfolio</a>
+            <a class="header-navigation-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-navigation-item">
             <a class="header-navigation-link link" href="">Contacts</a>
