--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <section>
         <ul class="list-of-projects list">
           <li class="projects-list-item">
-            <img src="./images/Portfolio/1Banking.jpg" alt="b" />
+            <img src="./images/Portfolio/1Banking.jpg" alt="b" /><img />
             <h3 class="project-title">Banking App Interface Concept</h3>
             <p class="project-description">App</p>
           </li>
