--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,9 @@
     </header>
 
     <main>
-      <!-- Section1 -->
       <section>
+        <h1 hidden>portfolio</h1>
+      <!-- Section1 -->
         <ul class="list">
           <li><button class="btn-active" type="button">All</button></li>
           <li><button class="btn" type="button">Web Site</button></li>
@@ -40,69 +41,69 @@
           <li><button class="btn" type="button">Design</button></li>
           <li><button class="btn" type="button">Marketing</button></li>
         </ul>
-      </section>
+   
 
       <!-- Section2 -->
-      <section>
         <ul class="list-of-projects list">
           <li class="projects-list-item">
-            <img src="./images/Portfolio/1Banking.jpg" alt="b" /><img />
+            <img src="./images/Portfolio/1Banking.jpg" alt="b" />
             <h3 class="project-title">Banking App Interface Concept</h3>
             <p class="project-description">App</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/2Cashless.jpg" alt="c" /><img />
+            <img src="./images/Portfolio/2Cashless.jpg" alt="c" />
             <h3 class="project-title">Cashless Payment</h3>
             <p class="project-description">Marketing</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" /><img />
+            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" />
             <h3 class="project-title">Meditation App</h3>
             <p class="project-description">App</p>
           </li>
           <li class="projects-list-item">
-            <img src="./images/Portfolio/4Taxi.jpg" alt="t" /><img />
+            <img src="./images/Portfolio/4Taxi.jpg" alt="t" />
             <h3 class="project-title">Taxi Service</h3>
             <p class="project-description">Marketing</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/5Screen.jpg" alt="s" /><img />
+            <img src="./images/Portfolio/5Screen.jpg" alt="s" />
             <h3 class="project-title">Screen Illustrations</h3>
             <p class="project-description">Design</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/6Online.jpg" alt="o" /><img />
+            <img src="./images/Portfolio/6Online.jpg" alt="o" />
             <h3 class="project-title">Online Courses</h3>
             <p class="project-description">Marketing</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/7Instagram.jpg" alt="i" /><img />
+            <img src="./images/Portfolio/7Instagram.jpg" alt="i" />
             <h3 class="project-title">Instagram Stories Concept</h3>
             <p class="project-description">Design</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/8Organic.jpg" alt="" /><img />
+            <img src="./images/Portfolio/8Organic.jpg" alt="o">
             <h3 class="project-title">Organic Food</h3>
             <p class="project-description">Web Site</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/9Fresh.jpg" alt="" /><img />
+            <img src="./images/Portfolio/9Fresh.jpg" alt="" />
             <h3 class="project-title">Fresh Coffee</h3>
             <p class="project-description">Web Site</p>
           </li>
         </ul>
       </section>
 
+      </main>
       <!-- Footer -->
     <footer class="footer">
-      <a class="footer-link link logo"href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-link link logo" href="./index.html"><span>Web</span>Studio</a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
