--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <!-- ! Header -->
     <header class="header">
       <nav>
-        <a class="header-link-WebStudio link logo" href="./index.html"
-          ><span>Web</span>Studio</a
-        >
+        <a class="header-link-WebStudio link logo" href="./index.html">
+          Web<span class="logo-studio-top">Studio</span></a>
         <ul class="header-navigation-list list">
           <li class="header-navigation-item">
-            <a class="header-navigation-link link" href="">Studio</a>
+            <a class="header-navigation-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-navigation-item">
             <a class="header-navigation-link link" href="./portfolio.html">Portfolio</a>
@@ -60,7 +59,7 @@
 
       <!-- Section2 -->
       <section class="features-section">
-        <h2 hidden>features</h2>
+        <h2 class="features-section-title" hidden>features</h2>
         <ul class="fearutes-list list">
           <li class="fearutes-item">
             <h3 class="fearutes-item-title">Strategy</h3>
@@ -158,7 +157,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-link link logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-link link logo" href="./index.html">Web<span class="logo-studio-bottom">Studio</span></a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
