--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- ! Header -->
     <header class="header">
       <nav>
-        <a class="header-link-WebStudio link logo" href="./index.html">
+        <a class="link logo" href="./index.html">
           Web<span class="logo-studio-top">Studio</span></a>
         <ul class="header-navigation-list list">
           <li class="header-navigation-item">
@@ -157,7 +157,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-link link logo" href="./index.html">Web<span class="logo-studio-bottom">Studio</span></a>
+      <a class="link logo" href="./index.html">Web<span class="logo-studio-bottom">Studio</span></a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
