--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
       <nav>
         <a class="header-link-WebStudio link logo" href="./index.html"><span>Web</span>Studio</a>
         <ul class="header-navigation-list list">
-          <li class="header-navigation-item"><a class="header-navigation-link link" href="">Studio</a></li>
-          <li class="header-navigation-item"><a  class="header-navigation-link link" href="">Portfolio</a></li>
-          <li class="header-navigation-item"><a  class="header-navigation-link link" href="">Contacts</a></li>
+          <li class="header-navigation-link"><a class="header-navigation-link link" href="./index.html">Studio</a></li>
+          <li class="header-navigation-link"><a  class="header-navigation-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-navigation-link"><a  class="header-navigation-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
@@ -34,30 +34,30 @@
       <h1 hidden>portfolio</h1>
       <!-- Section1 -->
         <ul class="list">
-          <li><button class="btn-active" type="button">All</button></li>
-          <li><button class="btn" type="button">Web Site</button></li>
-          <li><button class="btn" type="button">App</button></li>
-          <li><button class="btn" type="button">Design</button></li>
-          <li><button class="btn" type="button">Marketing</button></li>
+          <li><button class="btn-features-portfolio" type="button">All</button></li>
+          <li><button class="btn-features-portfolio" type="button">Web Site</button></li>
+          <li><button class="btn-features-portfolio" type="button">App</button></li>
+          <li><button class="btn-features-portfolio" type="button">Design</button></li>
+          <li><button class="btn-features-portfolio" type="button">Marketing</button></li>
         </ul>
    
 
       <!-- Section2 -->
         <ul class="list-of-projects list">
           <li class="projects-list-item">
-            <img src="./images/Portfolio/1Banking.jpg" alt="b" />
-            <h3 class="project-title">Banking App Interface Concept</h3>
-            <p class="project-description">App</p>
+            <img class="link" src="./images/Portfolio/1Banking.jpg" alt="b" />
+            <h2 class="project-title">Banking App Interface Concept</h2>
+            <p  class="project-description">App</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/2Cashless.jpg" alt="c" />
-            <h3 class="project-title">Cashless Payment</h3>
+            <img class="link" src="./images/Portfolio/2Cashless.jpg" alt="c" />
+            <h2 class="project-title">Cashless Payment</h2>
             <p class="project-description">Marketing</p>
           </li>
 
           <li class="projects-list-item">
-            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" />
+            <img class="link" src="./images/Portfolio/3Meditaion.jpg" alt="m" />
             <h3 class="project-title">Meditation App</h3>
             <p class="project-description">App</p>
           </li>
@@ -67,7 +67,7 @@
             <p class="project-description">Marketing</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/5Screen.jpg" alt="s" />
             <h3 class="project-title">Screen Illustrations</h3>
             <p class="project-description">Design</p>
