--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-link-WebStudio link logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="link logo" href="./index.html">Web<span class="logo-studio-top">Studio</span></a>
         <ul class="header-navigation-list list">
           <li class="header-navigation-link"><a class="header-navigation-link link" href="./index.html">Studio</a></li>
           <li class="header-navigation-link"><a  class="header-navigation-link link" href="./portfolio.html">Portfolio</a></li>
@@ -33,7 +33,7 @@
     <main>
       <h1 hidden>portfolio</h1>
       <!-- Section1 -->
-        <ul class="list">
+        <ul class="list of features list">
           <li><button class="btn-features-portfolio" type="button">All</button></li>
           <li><button class="btn-features-portfolio" type="button">Web Site</button></li>
           <li><button class="btn-features-portfolio" type="button">App</button></li>
@@ -58,24 +58,24 @@
 
           <li class="projects-list-item">
             <img class="link" src="./images/Portfolio/3Meditaion.jpg" alt="m" />
-            <h3 class="project-title">Meditation App</h3>
+            <h2 class="project-title">Meditation App</h2>
             <p class="project-description">App</p>
           </li>
           <li class="projects-list-item">
             <img src="./images/Portfolio/4Taxi.jpg" alt="t" />
-            <h3 class="project-title">Taxi Service</h3>
+            <h2 class="project-title">Taxi Service</h2>
             <p class="project-description">Marketing</p>
           </li>
 
-          <li class="projects-list-item link">
+          <li class="projects-list-item">
             <img src="./images/Portfolio/5Screen.jpg" alt="s" />
-            <h3 class="project-title">Screen Illustrations</h3>
+            <h2 class="project-title">Screen Illustrations</h2>
             <p class="project-description">Design</p>
           </li>
 
           <li class="projects-list-item">
             <img src="./images/Portfolio/6Online.jpg" alt="o" />
-            <h3 class="project-title">Online Courses</h3>
+            <h2 class="project-title">Online Courses</h2>
             <p class="project-description">Marketing</p>
           </li>
 
@@ -87,20 +87,20 @@
 
           <li class="projects-list-item">
             <img src="./images/Portfolio/8Organic.jpg" alt="o">
-            <h3 class="project-title">Organic Food</h3>
+            <h2 class="project-title">Organic Food</h2>
             <p class="project-description">Web Site</p>
           </li>
 
           <li class="projects-list-item">
             <img src="./images/Portfolio/9Fresh.jpg" alt="" />
-            <h3 class="project-title">Fresh Coffee</h3>
+            <h2 class="project-title">Fresh Coffee</h2>
             <p class="project-description">Web Site</p>
           </li>
         </ul>
       </main>
       <!-- Footer -->
     <footer class="footer">
-      <a class="footer-link link logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-link link logo" href="./index.html">Web<span class="logo-studio-bottom">Studio</span></a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
