--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
     </header>
 
     <main>
+      <section>
       <h1 hidden>portfolio</h1>
       <!-- Section1 -->
         <ul class="list of features list">
@@ -97,6 +98,7 @@
             <p class="project-description">Web Site</p>
           </li>
         </ul>
+      </section>
       </main>
       <!-- Footer -->
     <footer class="footer">
