--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
     </header>
 
     <main>
-      <section>
-      <h1 hidden>portfolio</h1>
-      <!-- Section1 -->
+    <section>
+    <h1 hidden>portfolio</h1>
+      <!-- list1 -->
         <ul class="list of features list">
           <li><button class="btn-features-portfolio" type="button">All</button></li>
           <li><button class="btn-features-portfolio" type="button">Web Site</button></li>
@@ -43,56 +43,56 @@
         </ul>
    
 
-      <!-- Section2 -->
+      <!-- list2 -->
         <ul class="list-of-projects list">
-          <li class="projects-list-item">
+          <li class="projects-list-item link ">
             <img class="link" src="./images/Portfolio/1Banking.jpg" alt="b" />
             <h2 class="project-title">Banking App Interface Concept</h2>
             <p  class="project-description">App</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img class="link" src="./images/Portfolio/2Cashless.jpg" alt="c" />
             <h2 class="project-title">Cashless Payment</h2>
             <p class="project-description">Marketing</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img class="link" src="./images/Portfolio/3Meditaion.jpg" alt="m" />
             <h2 class="project-title">Meditation App</h2>
             <p class="project-description">App</p>
           </li>
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/4Taxi.jpg" alt="t" />
             <h2 class="project-title">Taxi Service</h2>
             <p class="project-description">Marketing</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/5Screen.jpg" alt="s" />
             <h2 class="project-title">Screen Illustrations</h2>
             <p class="project-description">Design</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/6Online.jpg" alt="o" />
             <h2 class="project-title">Online Courses</h2>
             <p class="project-description">Marketing</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/7Instagram.jpg" alt="i" />
             <h3 class="project-title">Instagram Stories Concept</h3>
             <p class="project-description">Design</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/8Organic.jpg" alt="o">
             <h2 class="project-title">Organic Food</h2>
             <p class="project-description">Web Site</p>
           </li>
 
-          <li class="projects-list-item">
+          <li class="projects-list-item link">
             <img src="./images/Portfolio/9Fresh.jpg" alt="" />
             <h2 class="project-title">Fresh Coffee</h2>
             <p class="project-description">Web Site</p>
