--- a/portfolio.html
+++ b/portfolio.html
@@ -45,20 +45,22 @@
 
       <!-- list2 -->
         <ul class="list-of-projects list">
-          <li class="projects-list-item link ">
-            <img class="link" src="./images/Portfolio/1Banking.jpg" alt="b" />
-            <h2 class="project-title">Banking App Interface Concept</h2>
-            <p  class="project-description">App</p>
+          <li class="projects-list-item">
+            <a href class="link portfolio-link">
+              <img src="./images/Portfolio/1Banking.jpg" alt="b" />
+              <h2 class="project-title">Banking App Interface Concept</h2>
+              <p  class="project-description">App</p>
+            </a>
           </li>
 
           <li class="projects-list-item link">
-            <img class="link" src="./images/Portfolio/2Cashless.jpg" alt="c" />
+            <img src="./images/Portfolio/2Cashless.jpg" alt="c" />
             <h2 class="project-title">Cashless Payment</h2>
             <p class="project-description">Marketing</p>
           </li>
 
           <li class="projects-list-item link">
-            <img class="link" src="./images/Portfolio/3Meditaion.jpg" alt="m" />
+            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" />
             <h2 class="project-title">Meditation App</h2>
             <p class="project-description">App</p>
           </li>
