--- a/portfolio.html
+++ b/portfolio.html
@@ -54,50 +54,54 @@
           </li>
 
           <li class="projects-list-item link">
+            <a href class="link portfolio-link">
             <img src="./images/Portfolio/2Cashless.jpg" alt="c" />
             <h2 class="project-title">Cashless Payment</h2>
             <p class="project-description">Marketing</p>
+            </a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/3Meditaion.jpg" alt="m" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/3Meditaion.jpg" alt="m" />
             <h2 class="project-title">Meditation App</h2>
-            <p class="project-description">App</p>
+            <p class="project-description">App</p></a>
           </li>
+
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/4Taxi.jpg" alt="t" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/4Taxi.jpg" alt="t" />
             <h2 class="project-title">Taxi Service</h2>
             <p class="project-description">Marketing</p>
+            </a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/5Screen.jpg" alt="s" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/5Screen.jpg" alt="s" />
             <h2 class="project-title">Screen Illustrations</h2>
-            <p class="project-description">Design</p>
+            <p class="project-description">Design</p></a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/6Online.jpg" alt="o" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/6Online.jpg" alt="o" />
             <h2 class="project-title">Online Courses</h2>
-            <p class="project-description">Marketing</p>
+            <p class="project-description">Marketing</p></a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/7Instagram.jpg" alt="i" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/7Instagram.jpg" alt="i" />
             <h3 class="project-title">Instagram Stories Concept</h3>
-            <p class="project-description">Design</p>
+            <p class="project-description">Design</p></a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/8Organic.jpg" alt="o">
+            <a href class="link portfolio-link"><img src="./images/Portfolio/8Organic.jpg" alt="o">
             <h2 class="project-title">Organic Food</h2>
-            <p class="project-description">Web Site</p>
+            <p class="project-description">Web Site</p></a>
           </li>
 
           <li class="projects-list-item link">
-            <img src="./images/Portfolio/9Fresh.jpg" alt="" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/9Fresh.jpg" alt="" />
             <h2 class="project-title">Fresh Coffee</h2>
-            <p class="project-description">Web Site</p>
+            <p class="project-description">Web Site</p></a>
           </li>
         </ul>
       </section>
