--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
           </li>
 
           <li class="projects-list-item link">
-            <a href class="link portfolio-link"><img src="./images/Portfolio/9Fresh.jpg" alt="" />
+            <a href class="link portfolio-link"><img src="./images/Portfolio/9Fresh.jpg" alt="f" />
             <h2 class="project-title">Fresh Coffee</h2>
             <p class="project-description">Web Site</p></a>
           </li>
